# rabbithole-rs

./: .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug_report.md
ci/remove-dev-dependencies/: Cargo.toml
config/: actix.config.example.toml  actix.config.toml
rabbithole/: Cargo.toml
rabbithole-derive/: Cargo.toml
rabbithole-derive/src/: error.rs  field.rs  lib.rs
rabbithole-derive/src/backend/: actix.rs
rabbithole-derive/tests/: common.rs  entity_test.rs  query_test.rs
rabbithole-endpoint-actix/: Cargo.toml
rabbithole-endpoint-actix/config/: actix.config.test.cursor_based.toml  actix.config.test.default_page.toml  actix.config.test.offset_based.toml  actix.config.test.page_based.toml  actix.config.test.v1_0.toml  actix.config.test.v1_1.toml
rabbithole-endpoint-actix/examples/: manual_crud.rs  mock_gen.rs  mock_generating.rs
rabbithole-endpoint-actix/examples/model/: dog.rs  human.rs
rabbithole-endpoint-actix/examples/service/: dog.rs  human.rs  mod.rs
rabbithole-endpoint-actix/src/: lib.rs  middleware.rs  mock_gen.rs  settings.rs
rabbithole-endpoint-actix/tests/: 1_0_test.rs  1_1_test.rs  Cargo.toml  cursor_test.rs  integration_test.rs  lib.rs  paging_test.rs
rabbithole-endpoint-actix/tests/common/: fetching_test.rs  integration_test.rs  mod.rs  paging_test.rs
rabbithole-endpoint-actix/tests/common/model/: dog.rs  human.rs
rabbithole-endpoint-actix/tests/common/paging/: cursor_test.rs  mod.rs  offset_test.rs
rabbithole-endpoint-actix/tests/common/service/: dog.rs  human.rs  mod.rs
rabbithole-endpoint-actix/tests/model/: dog.rs  human.rs
rabbithole-endpoint-actix/tests/service/: dog.rs  human.rs
rabbithole-endpoint-actix/tests/v1_0/: common_test.rs
rabbithole-endpoint-actix/tests/v1_1/: common_test.rs  mod.rs
rabbithole-endpoint-hyper/: Cargo.toml
rabbithole-endpoint-hyper/src/: lib.rs  mock_server.rs
rabbithole-endpoint-hyper/tests/: server_test.rs
rabbithole-rs/: Cargo.toml
rabbithole-rs/src/: lib.rs
rabbithole-rs/src/model/: document.rs  error.rs  link.rs  mod.rs  patch.rs  relationship.rs  resource.rs
rabbithole-rs/tests/: model_test.rs
rabbithole/src/: entity.rs  error.rs  lib.rs  macros.rs  operation.rs
rabbithole/src/model/: document.rs  error.rs  link.rs  mod.rs  pagination.rs  patch.rs  query.rs  relationship.rs  resource.rs  version.rs
rabbithole/src/query/: filter.rs  mod.rs  page.rs  sort.rs
rabbithole/src/rule/: mod.rs  v1_0.rs  v1_1.rs
rabbithole/tests/: common.rs  filter_test.rs  helper.rs  model_test.rs  paging_test.rs  query_test.rs  sorting_test.rs
rabbithole/tests/common/: mod.rs
scripts/: clean-test.sh
