[package]
name = "rabbithole-derive"
version = "0.1.0"
authors = ["UkonnRa <ukonnra@outlook.com>"]
edition = "2018"
description = "The macro system helping user to model the relationship of their data"
homepage = "https://github.com/UkonnRa/rabbithole-rs/rabbithole-drive"
repository = "https://github.com/UkonnRa/rabbithole-rs.git"
readme = "README.md"
keywords = ["jsonapi"]
categories = []
license = "MIT"

[lib]
proc-macro = true

[dependencies]
quote = "~1.0"
syn = { version = "~1.0", features = ["extra-traits"] }
proc-macro2 = "~1.0"
