[package]
name = "rabbithole-derive"
version = "0.4.0"
authors = [ "Ukonn Ra <ukonnra@outlook.com>" ]
edition = "2018"
description = "The macro system helping users to model the relationship of their data"
homepage = "https://github.com/UkonnRa/rabbithole-rs/rabbithole-drive"
repository = "https://github.com/UkonnRa/rabbithole-rs.git"
readme = "../README.md"
keywords = [ "jsonapi" ]
categories = [ ]
license = "MIT"

[lib]
proc-macro = true

[dependencies]
http = "0.2.1"
lazy_static = "1.4.0"
proc-macro2 = "1.0.17"
quote = "1.0.6"
syn = { version = "1.0.26", features = [ "extra-traits" ] }
thiserror = "1.0.19"

[dev-dependencies]
rabbithole = { path = "../rabbithole", version = "~0.4" }
rand = "0.7.3"
serde = "1.0.110"
serde_json = "1.0.53"
uuid = { version = "0.8.1", features = [ "serde", "v4" ] }
