[package]
name = "rabbithole-endpoint-actix"
version = "0.3.1"
authors = ["Ukonn Ra <ukonnra@outlook.com>"]
edition = "2018"
description = "JSON:API Actix-web backend"
homepage = "https://github.com/UkonnRa/rabbithole-rs"
repository = "https://github.com/UkonnRa/rabbithole-rs.git"
readme = "../README.md"
keywords = ["jsonapi"]
categories = []
license = "MIT"

[dependencies]
env_logger = "~0.7"
log = "~0.4"
lazy_static = "~1.4"

futures = { version = "~0.3" }
actix-web = "=2.0.0-alpha.1"

url = "~1.7"
http = "~0.1"

serde = "~1.0"
serde_json = "~1.0"
uuid = "~0.8"
async-trait = "~0.1"
rand = "~0.7"
config = "~0.9"

rabbithole = { path = "../rabbithole", version = "~0.3" }
rabbithole-derive = { path = "../rabbithole-derive", version = "~0.3" }

[dev-dependencies]
actix-http-test = "=0.3.0-alpha.1"
actix-http = "=0.3.0-alpha.1"