[package]
name = "rabbithole-endpoint-actix"
version = "0.4.0"
authors = [ "Ukonn Ra <ukonnra@outlook.com>" ]
edition = "2018"
description = "JSON:API Actix-web backend"
homepage = "https://github.com/UkonnRa/rabbithole-rs"
repository = "https://github.com/UkonnRa/rabbithole-rs.git"
readme = "../README.md"
keywords = [ "jsonapi" ]
categories = [ ]
license = "MIT"

[dependencies]
actix-rt = "1.1.1"
actix-web = "2.0.0"
actix-service = "1.0.5"
actix-http = "1.0.1"
async-trait = "~0.1"
config = "0.10.1"
env_logger = "0.7.1"
futures = "0.3.5"
http = "0.2.1"
lazy_static = "1.4.0"
log = "0.4.8"
rabbithole = { path = "../rabbithole", version = "~0.4" }
rabbithole-derive = { path = "../rabbithole-derive", version = "~0.4" }
rand = "~0.7"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0.53"
url = "2.1.1"
uuid = "0.8.1"

[dev-dependencies]
actix-http = "1.0.1"
actix-http-test = "1.0.0"
rabbithole-endpoint-actix-tests-common = { path = "./tests" }
