[package]
name = "rabbithole-endpoint-hyper"
version = "0.1.0"
authors = ["UkonnRa <ukonnra@outlook.com>"]
edition = "2018"
description = "JSON:API Hyper endpoint"
homepage = "https://github.com/UkonnRa/rabbithole-rs"
repository = "https://github.com/UkonnRa/rabbithole-rs.git"
readme = "../README.md"
keywords = ["jsonapi"]
categories = []
license = "MIT"

[[bin]]
name = "mock_server"
path = "src/mock_server.rs"

[dependencies]
hyper = "=0.13.0-alpha.4"
tokio = "=0.2.0-alpha.6"
rabbithole = { path = "../rabbithole" }
url = "~2.1"

[dev-dependencies]
rabbithole-derive = { path = "../rabbithole-derive" }
uuid = "~0.8"
serde = "~1.0"
serde_json = "~1.0"
