[package]
name = "rabbithole"
version = "0.1.0"
authors = ["Ukonn Ra <ukonnra@outlook.com>"]
edition = "2018"
description = "JSON:API Data Structure & Query implementation"
homepage = "https://github.com/UkonnRa/rabbithole-rs"
repository = "https://github.com/UkonnRa/rabbithole-rs.git"
readme = "../README.md"
keywords = ["jsonapi"]
categories = []
license = "MIT"

[dependencies]
env_logger = "~0.6"
log = "~0.4"
lazy_static = "~1.4"

thiserror = "~1.0"

serde = "~1.0"
serde_json = "~1.0"
serde_derive = "~1.0"

http = "~0.1"
uuid = { version = "~0.8", features = ["v4", "serde"] }
rsql-rs = "~0.2"
