[package]
name = "rabbithole"
version = "0.3.1"
authors = ["Ukonn Ra <ukonnra@outlook.com>"]
edition = "2018"
description = "JSON:API Data Structure & Query implementation"
homepage = "https://github.com/UkonnRa/rabbithole-rs"
repository = "https://github.com/UkonnRa/rabbithole-rs.git"
readme = "../README.md"
keywords = ["jsonapi"]
categories = []
license = "MIT"


[features]
default = []
page_cursor = []
filter_rsql = []

[dependencies]
env_logger = "~0.6"
log = "~0.4"
lazy_static = "~1.4"
regex = "~1.3"

thiserror = "~1.0"

serde = "~1.0"
serde_json = "~1.0"
serde_derive = "~1.0"

http = "~0.1"
url = "~2.1"
percent-encoding = "~2.1"
base64 = "~0.11"

uuid = { version = "~0.8", features = ["v4", "serde"] }
rsql-rs = "~0.2"
async-trait = "~0.1"

[dev-dependencies]
rabbithole-derive = { path = "../rabbithole-derive", version = "~0.3" }