[package]
name = "rabbithole"
version = "0.4.0"
authors = [ "Ukonn Ra <ukonnra@outlook.com>" ]
edition = "2018"
description = "JSON:API Data Structure & Query implementation"
homepage = "https://github.com/UkonnRa/rabbithole-rs"
repository = "https://github.com/UkonnRa/rabbithole-rs.git"
readme = "../README.md"
keywords = [ "jsonapi" ]
categories = [ ]
license = "MIT"

[features]
default = [ ]

[dependencies]
async-trait = "~0.1"
base64 = "0.12.1"
env_logger = "0.7.1"
http = "0.2.1"
http-serde = "1.0.1"
itertools = "0.9.0"
lazy_static = "~1.4"
log = "~0.4"
num-integer = "~0.1"
percent-encoding = "~2.1"
regex = "~1.3"
rsql = "~0.4"
serde = "~1.0"
serde_derive = "~1.0"
serde_json = "~1.0"
thiserror = "~1.0"
url = "2.1.1"
uuid = { version = "~0.8", features = [ "v4", "serde" ] }

[dev-dependencies]
rabbithole-derive = { path = "../rabbithole-derive", version = "~0.4" }
